# Gravity_ARAS

./: .env.example  .gitignore  ARAS_Architecture.md  ARAS_Project_Plan_FastAPI.md  ARAS_Requirements_Free.md  ARAS_Team_Prompt.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  STRUCTURE.md  TEAM_MEETING_AGENDA.md  TEAM_PROGRESS_REVIEW.md  TEAM_PROMPT.md  TEAM_VOTING_SESSION.md  TEST_FIXING_ROADMAP.md  TODO_v1.0.md  V1_0_0_RELEASE_NOTES.md  V1_RELEASE_PLANNING_MEETING.md  alembic.ini  docker-compose.yml  pyproject.toml  security_report.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 278207100710_initial_migration_create_news_articles_.py  c2352ab4b554_add_fulltext_search_to_articles.py
app/: __init__.py  main.py
app/analytics/: __init__.py
app/api/: __init__.py
app/api/v1/: __init__.py  api.py
app/api/v1/endpoints/: analysis.py  articles.py  entities.py  health.py  trends.py
app/core/: audit_logger.py  config.py  database.py  rate_limiter.py  redis_client.py  security_headers.py
app/ingestion/: __init__.py
app/models/: news_models.py
app/nlp/: __init__.py  spacy_engine.py
app/schemas/: news_schemas.py
app/scrapers/: __init__.py  news_spider.py
app/services/: analysis_service.py  news_service.py  nlp_service.py
config/: news_sources.yaml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
scripts/: init_db.sh  lint.sh  nlp_poc.py  run_tests.sh  seed_data.py  start_dev.sh  test_nlp.py
tests/: conftest.py  test_analysis.py  test_analysis_comprehensive.py  test_articles.py  test_articles_comprehensive.py  test_entities_trends.py  test_health.py  test_health_comprehensive.py  test_news_service.py  test_nlp_service.py  test_rate_limiting.py  test_search.py  test_security_headers.py
tests/load/: locustfile.py
